feat: Añadida fecha y hora en el código QR y mejoras en la visualización

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-    <html lang="en">
+    <html lang="es">
       <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>QR Label Generator</title>
+        <title>Generador de Etiquetas QR</title>
       </head>
       <body>
         <div id="root"></div>
